# Football-Analysts

./: .gitignore  README.md  SETUP.md  football_metrics.py  metrics_cheat_sheet.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/: run_pass_map.py  run_radar.py  run_shot_map.py  run_xt.py
football_analyst/: __init__.py  apifootball.py  data.py
football_analyst/viz/: __init__.py  pass_map.py  radar.py  shot_map.py
notebooks/: 01_getting_started.ipynb
tests/: conftest.py  test_data.py  test_metrics.py  test_xt.py
webapi/: Dockerfile  apifootball.py  app.py  requirements.txt
